--- a/configs/dpo-rar-test.yaml
+++ b/configs/dpo-rar-test.yaml
@@ -1,12 +1,12 @@
 
-output_dir: $GCS_MODEL_DIR/jax-dpo-rar
-name: dpo-rar-b
-project: jax-dpo-rar
+output_dir: $GCS_MODEL_DIR/planb/ablation/data/pt
+name: caformer-xl-192-3step-500ep-sit-5step
+project: jax-adv-image-net-data
 steps: 1281167
 training_epoch: 500
 warmup_epoch: 20
 log_interval: 100
-eval_epoch: 1
+eval_epoch: 10
 grad_accum_steps: 1
 #train_fn: training_step_kl
 dp: -1
@@ -15,11 +15,24 @@ tp: 1
 #resume: True
 
 
+
+# No Valid data shard . Valid diretly by openai FID samples
+
 dataset:
-  train_batch_size: 256
+  train_batch_size: 16
   train_loader_workers: 20
   train_dataset_shards: "$GCS_DATASET_DIR/imagenet-vq/shards-{00000..00503}.tar"
   shuffle_seed: 10
+
+
+#  train_dataset_shards: "$GCS_DATASET_DIR/imagenet-1k-wds/imagenet1k-train-{0000..1023}.tar"
+#  valid_batch_size: 4096
+#  valid_loader_workers: 10
+#  valid_dataset_shards: "$GCS_DATASET_DIR/imagenet-1k-wds/imagenet1k-validation-{00..63}.tar"
+#    ['$GCS_MODEL_DIR/imagenet-generated-100steps-cfg1.0-eta0.0/shards-{00000..12799}.tar']
+#    ['$GCS_MODEL_DIR/imagenet-generated-sit-250steps-50m/shards-{00000..05983}.tar']
+
+
 
 train_state:
   model:
@@ -38,7 +51,7 @@ train_state:
   optimizer:
     target: 'lamb'
     optimizer_kwargs:
-      learning_rate: 1.0e-4
+      learning_rate: 1.0e-3
       init_value: 1.0e-6
       end_learning_rate: 1.0e-5
       weight_decay: 0.05
